# bevy_step_loader

./: .gitignore  Cargo.toml  README.md
assets/: 22604_bcab4db9_0001_2.step  76879_65a30a82_0010_2.step
examples/: step_3d_scene.rs  usage.rs
src/: lib.rs
